# agent-container

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  AGENTS.md  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  e2e.yml  integration.yml  security.yml  serve.yml
agent/: aider_runner.py  cli.py  git_ops.py  log_store.py  opencode_runner.py  runner.py  tester.py
agent/backends/: __init__.py  aider.py  claude_code.py  gemini.py  opencode.py  stub.py
agents/: index.html
analysis/: index.html
analysis/2026-05-05/: index.html
analysis/2026-05-08/: index.html
analysis/2026-05-09/: index.html
analysis/2026-05-12/: index.html
analysis/2026-05-15/: index.html
architecture/: index.html
cli/: index.html
context/: index.html
contributing/: index.html
dashboard/: app.py  index.html  router.py  store.py
dashboard/static/: index.html
docs/: agents.md  architecture.md  cli.md  context.md  contributing.md  dashboard.md  enterprise.md  index.md  lessons-learned.md  logging.md  mcp.md  model-profiles.md  models.md  quickstart.md  roadmap.md  teams.md
docs/analysis/: 2026-05-05.md  2026-05-08.md  2026-05-09.md  2026-05-12.md  2026-05-15.md  index.md
docs/lessons/: aider.md  deployment-modal.md  opencode-proxy.md  pipeline-reliability.md  token-cost.md
enterprise/: index.html
examples/: fix_bug.py  mcp_client.py  run_with_dashboard.py
lessons-learned/: index.html
lessons/aider/: index.html
lessons/deployment-modal/: index.html
lessons/opencode-proxy/: index.html
lessons/pipeline-reliability/: index.html
lessons/token-cost/: index.html
logging/: index.html
mcp/: index.html
mcp_server/: server.py
modal/: serve.py
model-profiles/: index.html
models/: index.html
quickstart/: index.html
roadmap/: index.html
sandbox/: __init__.py  config.py  diff_scanner.py  providers.py  result.py  sandbox.py  spec.py
scripts/: check_container_imports.py  combine_analysis.py  conventions_impact.py  run_matrix.py  token_analysis.py  wait_for_serve.py
search/: search_index.json
teams/: index.html
tests/integration/: test_fix_bug.py  test_serve_reachable.py
tests/unit/: test_aider_runner.py  test_backends.py  test_cli.py  test_config.py  test_diff_scanner.py  test_git_ops.py  test_log_store.py  test_mcp_server.py  test_providers.py  test_responses_proxy.py  test_result.py  test_runner.py  test_sandbox.py  test_spec.py  test_store.py  test_tester.py
